2003-06-25  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/ReadGedcom.py: removed unused variable
	* src/latin_utf8.py: explicity state iso-8859-1 to unicode translation
	* src/gramps_main.py: handle clearing of tabs better, eliminating
	spurious tabs being added on a complete rebuild of the tabs.

2003-06-25  Tim Waugh  <twaugh@redhat.com>
	* src/plugins/Ancestors.py: Handle page break option.
	* src/Date.py: Make sure range is 0 when it should be.  Dates compare
	differently if only one is a range.

2003-06-24  Don Allingham  <dallingham@users.sourceforge.net>
	* src/SubstKeywords.py: Fixed typo on getName
	* src/plugins/WriteGedcom.py: Allow iso-8859-1 (ANSI) encoding
	* src/plugins/gedcomexport.glade: Allow iso-8859-1 (ANSI) encoding
	* src/docgen/PdfDoc.py: handle page break
	* src/plugins/BookReport.py: move book report to its own category,
	handle page break properly
	* src/plugins/FtmStyleAncestors.py: handle book improvements
	* src/plugins/FtmStyleDescendants.py: handle book improvements
	* src/plugins/IndivSummary.py: handle book improvements, rename
	document styles
	* src/plugins/SimpleBookTitle.py: new page title for book
	
2003-06-24  Tim Waugh  <twaugh@redhat.com>
	* src/GrampsParser.py: Use access methods rather than poking directly.
	* src/RelLib.py: Keep statistics on gender distribution among first
	names so that it can be used for guessing.
	* src/edit_person.glade: More event handlers.
	* src/EditPerson.py: Guess gender when appropriate.

2003-06-23  Tim Waugh  <twaugh@redhat.com>
	* src/NoteEdit.py: Use automatic scrolling policy, to fix scrolling.

2003-06-21  Tim Waugh  <twaugh@redhat.com>
	* src/plugins/Ancestors.py: Better handling of missing photos.
	* src/plugins/Ancestors.py (event_info): Better handling of strings.
	* src/plugins/Ancestors.py (person_name): Handle titles and suffices.

2003-06-19  Tim Waugh  <twaugh@redhat.com>
	* Makefile.am, doc/Makefile.am, doc/omf.make, doc/xmldocs.make: