@@ -1,3 +1,7 @@
+2003-06-26  Tim Waugh  <twaugh@redhat.com>
+	* src/plugins/Ancestors.py: Briefly list children from other
+	marriages.  Make extra table cells for other spouses.
+
 2003-06-25  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/plugins/ReadGedcom.py: removed unused variable
 	* src/latin_utf8.py: explicity state iso-8859-1 to unicode translation
